--- a/css/styles.css
+++ b/css/styles.css
@@ -1,73 +1,138 @@
 body {
     color: #434455;
-    font-family: 'Roboto'; 
+    background-color: #ffffff;
+    font-family: "Roboto", sans-serif; 
     font-weight: 400;
     size: 16px;
     line-height: 24px;
     letter-spacing: 2%;
 }
-ul {
-    list-style-type: none;
-}
-.link:hover,
-.link:focus{
-    color: #4d5ae5;
-    font-weight: 400;
-    size: 12px;
-    line-height: 16px;
-    letter-spacing: 4%;
-    text-decoration: underline;
-}
 nav {
     background-color: #ffffff;
 }
+.logo {
+    font-family: "Raleway", sans-serif;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 1.17;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: #4d5ae5
+}
+address{
+    font-style: normal;
+    letter-spacing: 0.02em;
+    color: #434455;
+}
+address:hover,
+address:focus {
+    color: #404bbf;
+}
+span {
+    color: #2e2f42;
+}
+ul {
+    list-style-type: none;
+}
+.link{
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #2e2f42
+    }
+.link:hover,
+.link:focus{
+    color: #404bbf;
+    text-decoration: underline;
+}
+
 .solutions {
     background-color: #2e2f42;
     width: 140;
     height: 600;
 }
-h1 {
+.header1 {
     font-weight: bold;
-    size: 56px;
-    letter-spacing: 2%;
-    line-height: 60px;
+    font-size: 56px;
+    letter-spacing: 0.02em;
+    line-height: 1.07;
     text-align: center;
     color: #ffffff;
 }
-button {
+.button {
     cursor: pointer;
     color: #ffffff;
-    background-color: #404bbf;
-    text-align: center;
-    border-radius: 4px solid white;
-    font-weight: medium;
-    size: 16px;
-    line-height: 24px;
-    letter-spacing: 4%;
+    background-color: #4D5AE5;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
 }
 .small-text {
     font-weight: 400;
-    size: 12px;
-    line-height: 14px;
-    letter-spacing: 4%;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
 }
 .team-card {
     background-color: #f4f4fd;
-}
-h2 {
-    font-weight: bold;
-    size: 36px;
-    letter-spacing: 2%;
+    color: #2e2f42;
+    font-size: 36px;
+    line-height: 1.11;
+    letter-spacing: 0.02em;
     text-align: center;
+    text-transform: capitalize;
 }
-h3{
-    font-weight: medium;
-    size: 20px;
-    letter-spacing: 2%;
+.li-team{
+    background-color: #ffffff;
 }
-footer{
+.team-name{
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+    color: #2e2f42;
+}
+.portfolio-header{
+    font-size: 36px;
+    line-height: 1.11;
+    text-align: center;
+    letter-spacing: 0.02em;
+    text-transform: capitalize;
+    color: #2e2f42;
+}
+.portfolio-h3{
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+    color: #2e2f42;
+    }
+.portfolio-item{
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #434455;
+    }
+.footer{
     background-color: #2e2f42;
 }
-footer p {
+.footer-link{
+    font-family: "raleway" sans-serif;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 1.17;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: #4D5AE5;
+}
+.footer-span{
     color: #f4f4fd;
+}
+.footer-p {
+    line-height: 1.5;
+    color: #f4f4fd;
+    letter-spacing: 0.02em;
 }
