--- a/css/styles.css
+++ b/css/styles.css
@@ -49,7 +49,9 @@ ul {
     color: #404bbf;
     text-decoration: underline;
 }
-
+.solutions{
+    background-color: #2e2f42;
+}
 .header_solutions {
     font-weight: bold;
     font-size: 56px;
@@ -57,6 +59,7 @@ ul {
     line-height: 1.07;
     text-align: center;
     color: #ffffff;
+
 }
 .button {
     cursor: pointer;
