--- a/css/styles.css
+++ b/css/styles.css
@@ -24,7 +24,7 @@ address{
     letter-spacing: 0.02em;
     color: #434455;
 }
-.address-tag {
+.address {
     color: #434455;
 }
 .address:hover,
@@ -71,15 +71,28 @@ ul {
     line-height: 1.5;
     letter-spacing: 0.04em;
 }
+.header-principles {
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+    color: #2e2f42;
+}
 .button:hover,
 .button:focus {
     background-color: #404bbf;
+}
+.our-team{
+    font-size: 36px;
+    line-height: 1.11;
+    letter-spacing: 0.02em;
 }
 .small-text {
     font-weight: 400;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
+    color: #434455;
 }
 .team-list {
     font-weight: 500;
