--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,9 @@ body {
 nav {
     background-color: #ffffff;
 }
+a {
+text-decoration: none;
+}
 .logo {
     font-family: "Raleway", sans-serif;
     font-weight: 700;
